adding cloudinaryb and some buissness logic

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/ophix
+MONGODB_URI=mongodb://127.0.0.1:27017/Ophix
+CLOUDINARY_NAME='divtd1nl9'
+CLOUDINARY_API_KEY='581442177619756'
+CLOUDINARY_SECRET_KEY='22OT8lUVDBLk3vaUAwo_XNtzB3A'
