Appointment finalizing feature added for doctor

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 MONGODB_URI=mongodb://127.0.0.1:27017/Ophix
-CLOUDINARY_NAME='divtd1nl9'
-CLOUDINARY_API_KEY='581442177619756'
-CLOUDINARY_SECRET_KEY='22OT8lUVDBLk3vaUAwo_XNtzB3A'
-ADMIN_EMAIL='admin@ophix.com' 
-ADMIN_PASSWORD='22ophix194'
-JWT_SECRET='bigyazdan'
+CLOUDINARY_NAME=divtd1nl9
+CLOUDINARY_API_KEY=581442177619756
+CLOUDINARY_SECRET_KEY=22OT8lUVDBLk3vaUAwo_XNtzB3A
+ADMIN_EMAIL=admin@ophix.com 
+ADMIN_PASSWORD=22ophix194
+JWT_SECRET=bigyazdan
