--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "delay": "500ms"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
@@ -35,6 +36,7 @@
     "mongoose": "^9.0.2",
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
+    "pdfkit": "^0.17.2",
     "validator": "^13.15.26"
   }
 }
